# notredam

./: New_mediadart_processor.md  ProjectHome.md  README.md
debian/: changelog  control  postinst  preinst  rules
gst-watermarkplugin/: AUTHORS  autogen.sh  configure.ac
gst-watermarkplugin/debian/: README  changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex
gst-watermarkplugin/src/: Makefile.am  gstmediadartwatermarkfilter.c  gstmediadartwatermarkfilter.h
src/: MANIFEST.in  setup.py
src/air_uploader/: Queue.js  application.xml  main.html  main.js
src/air_uploader/css/: tools_icons.css
src/air_uploader/extjs/: ext-air-debug.js  ext-air.js  ext-all-debug.js  ext-all.js
src/application/: settings.py  urls.py
src/application/base/: models.py  views.py
src/application/files/: QueueCPP.compressed.js  general.js  upload_gears.js
src/application/templates/: home.html  login.html
src/dam/: 001-notredam.cfg  README.txt  actionctl.py  backup.db.important  batch_processor.py  batch_processor.py.old  celeryconfig.py  config.py  dam_init.py  import_dir.py  initial_data.json  intial_data_script.py  ldapBackend.py  logger.py  manage.py  md5sum.py  mediadart_processor.py  middleware.py  new_mediadart_processor.py  notredam.py  run_tests.py  scripts_test.py  settings.py.default  settings.py.default.dev  settings.py.mysql  start_mediadart.py  supported_types.py  urls.py  wsgi.py  xmp_embedding.py
src/dam/admin/: urls.py  views.py
src/dam/api/: __init__.py  decorators.py  exceptions.py  models.py  polaris_uploading.py  test_upload.py  tests.py  (+5 more)
src/demo_plugin/: check_demo_accounts.py
src/utilities/: flickr_utility.py
(+411 files in other folders)
